# attention-captioning-tutorial

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  demo_01_ImageCaptioningWithoutAttention.ipynb  demo_02_ImageCaptioningUsingAttention.ipynb  docker-compose.yml  env.example  pyproject-poetry.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_notebook.py  setup.sh
.github/workflows/: ci.yml
scripts/: run_notebook.py  setup.sh  validate_data.py
tests/: __init__.py  test_data_validation.py  test_model_functions.py
